nginx image build is successful but nginx.conf file is not perfect

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 
 services:
-  server:
+  server: # service name
     image: nginx # image is built with build
     build: ./requirements/nginx
     #configs:
