--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,2 +1,18 @@
 FROM debian:buster
 LABEL org.opencontainers.image.authors="suahn@student.42.fr"
+
+RUN apt-get update \
+    && apt-get upgrade -y \
+    && apt-get install -y nginx \
+    && apt-get install -y openssl
+
+# NGINX CONFIG && SSL
+COPY conf/nginx.conf /etc/nginx/
+RUN mkdir -p /etc/nginx/ssl \
+    && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout \
+    /etc/nginx/ssl/localhost.key -out /etc/nginx/ssl/localhost.crt \
+    -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=Suahn/CN=localhost/EA=suahn@student.42.fr"
+
+EXPOSE 9000/tcp
+
+CMD ["service", "nginx", "start"]
