--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,8 +7,36 @@ events {
         worker_connections 768;
         # multi_accept on;
 }
-
+# Configuring NGINX as a Web Server
 http {
+
+        server {
+                listen                  127.0.0.1:8080;
+                # Set the root directory to search for the file
+                location / {
+                        root /data/www/html;
+                }
+                # Disable logging of errors related to file existence
+                open_file_cache_errors off;
+                # Make an internal redirect if the file is not found
+                error_page 404 = /fetch$uri;
+        }
+
+        # SETUP HTTPS server
+        
+        server {
+                listen                  443 ssl;
+                ##
+                # SSL Settings
+                ##
+                ssl_certificate         /etc/nginx/ssl/ssl_cert.crt;
+                ssl_certificate_key     /etc/nginx/ssl/ssl_cert.key;
+                ssl_protocols TLSv1.3; # Dropping SSLv3, ref: POODLE
+                ssl_prefer_server_ciphers on;
+                ssl_session_timeout     1d;
+                ssl_session_cache       shared:SSL:10m; 
+                ssl_session_tickets     off;
+        }
 
         ##
         # Basic Settings
@@ -27,28 +55,8 @@ http {
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
 
-        ##
-        # SSL Settings
-        ##
-
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SharedNixCraftSSL:10m; 
-        ssl_session_tickets off;
-        
-        ssl_protocols TLSv1.3; # Dropping SSLv3, ref: POODLE
-        ssl_prefer_server_ciphers on;
-
         # HSTS (ngx_http_headers_module is required) (63072000 seconds)
         add_header Strict-Transport-Security "max-age=63072000" always;
-        
-        # OCSP stapling
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        
-        # verify chain of trust of OCSP response using Root CA and Intermediate certs
-        ssl_trusted_certificate /etc/nginx/ssl/fullchain.pem;
 
         ##
         # Logging Settings
@@ -78,7 +86,6 @@ http {
         include /etc/nginx/sites-enabled/*;
 }
 
-
 #mail {
 #       # See sample authentication script at:
 #       # http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
@@ -100,4 +107,4 @@ http {
 #       }
 #}
 
-deamon off;
+#deamon off;
