--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -14,7 +14,7 @@ http {
                 listen                  127.0.0.1:8080;
                 # Set the root directory to search for the file
                 location / {
-                        root /data/www/html;
+                        root /var/www/html;
                 }
                 # Disable logging of errors related to file existence
                 open_file_cache_errors off;
