--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,16 +4,23 @@ LABEL description="Wordpress"
 #INSTALL PHP SCRIPTING LANGUAGE that is needed to run WORDPRESS
 RUN apt-get update \
     && apt-get upgrade -y \
-    && apt-get install -y php libapache2-mod-php php-mysql php-fpm\
+#Why does a basic PHP install require Apache?
+#PHP requires one of three dependencies to exist on a machine:
+#libapache2-mod-php
+#php-fpm
+#php-cgi
+#A simple PHP install uses the libapache2-mod-php module by default,
+#which requires installation of the full Apache HTTP server software suite.
+#To avoid this, install either the php-cgi or the php-fpm module for Nginx.
+    #&& apt-get install -y php libapache2-mod-php php7.3 php-json php-mbstring php-mysql php-fpm \
+    && apt-get install php7.3-fpm -y \
     && apt-get install -y wget
-#INSTALL WORDPRESS & CLI
+#INSTALL WORDPRESS
 WORKDIR /var/www/html
 RUN wget https://wordpress.org/latest.tar.gz \
     && tar -zxvf latest.tar.gz && rm -rf latest.tar.gz \
-    && mv wordpress/* . && rm -r wordpress \
-    && wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+    && mv wordpress/* . && rm -r wordpress
 #CONFIG WORDPRESS
 COPY conf/wp-config.php .
 
-CMD ["php-fpm"]
-#CMD ["php", "wp-cli.phar", "server", "--allow-root"]
+CMD ["service", "php7.3-fpm", "start"]
