--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
-MYSQL_ROOT_PASSWORD=somewordpress
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wordpress
-MYSQL_PASSWORD=wordpress
+MYSQL_ROOT_PASSWORD=pass42
+MYSQL_DATABASE=db
+MYSQL_USER=user
+MYSQL_PASSWORD=user
 
-WORDPRESS_DB_HOST=db
-WORDPRESS_DB_USER=wordpress
-WORDPRESS_DB_PASSWORD=wordpress
-WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_HOST=localhost
+WORDPRESS_DB_USER=user
+WORDPRESS_DB_PASSWORD=user
+WORDPRESS_DB_NAME=db
