--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,57 +1,46 @@
 version: "3.7"
 
 services:
-  web_server: # service name
+  nginx: # service name
     #image: nginx # image is built with build
     build: ./requirements/nginx
-    volumes:
-      - web-data:/home/suahn/data/www:rw
+    #volumes:
+    #  - web-data:/home/suahn/data/www:rw
     restart: always
     expose: # publish the ports to the linked services of the container
       - "9000"
     ports:
       - "8080:443/tcp" # host:container
+    depends_on:
+      - wordpress
+    #tty: true
   db:
     #image: mariadb
     build: ./requirements/mariadb
-    #command: '--default-authentication-plugin=mysql_native_password'
-    volumes:
-      - db-data:/home/suahn/data/mariadb:rw
+    #volumes:
+    #  - db-data:/home/suahn/data/mariadb:rw
     restart: always
-    #env_file: .env
-    environment:
-      - MYSQL_ROOT_PASSWORD=suahn
-      - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
+    env_file: .env
     expose:
       - "3306"
-  web:
+   #tty: true
+  wordpress:
     #image: wordpress
     build: ./requirements/wordpress
-    volumes:
-      - web-data:/home/suahn/data/www:rw
+ #   volumes:
+  #    - web-data:/home/suahn/data/www:rw
     restart: always
-    #env_file: .env
-    environment:
-      - WORDPRESS_DB_HOST=localhost
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
-      - WORDPRESS_DB_NAME=wordpress
+    env_file: .env
     expose:
       - "3306"
       - "9000"
     depends_on:
-      - web_server
       - db
+    #tty: true
 
-volumes:
-  db-data:
-  web-data:
-#configs:
-# my_config:
-#   external: true
-#entrypoint: ./entrypoint.sh
+#volumes:
+#  db-data:
+#  web-data:
 
 networks:
   default:
