--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -18,4 +18,10 @@ RUN echo "<?php phpinfo(); ?>" >> /var/www/html/info.php
 
 #RUN ["service", "nginx", "start"]
 #run in debug mode (foreground)
+RUN nginx -t
+#www-data is the user that web servers on Ubuntu (Apache, nginx, for example)
+#use by default for normal operation.
+#The web server process can access any file that www-data can access.
+#RUN chown -R www-data:www-data *
+#RUN chmod -R 755 *
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
