fix nginx+php.fpm config but domain name error

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,10 @@
+DOMAIN_NAME=suahn.42.fr
+# MYSQL SETUP
 MYSQL_ROOT_PASSWORD=pass42
 MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=user
-
+# WORDPRESS SETUP
 WORDPRESS_DB_HOST=localhost
 WORDPRESS_DB_USER=user
 WORDPRESS_DB_PASSWORD=user
