--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     build: ./requirements/nginx
     volumes:
       - web-data:/var/www/html
-    #  - web-data:/var/www/http:rw
     restart: always
     expose: # publish the ports to the linked services of the container
       - "9000"
     ports:
       - "8080:443/tcp" # host:container
+    env_file: .env
+    extra_hosts:
+      - "${DOMAIN_NAME}:127.0.0.1" # created in /etc/hosts
     depends_on:
       - wordpress
     #tty: true
@@ -27,10 +29,10 @@ services:
    #tty: true
   wordpress:
     #image: wordpress
+    container_name: wordpress
     build: ./requirements/wordpress
     volumes:
-      - web-data:/var/www/html
-    # - web-data:/var/www/http:rw
+      - web-data:/var/www/html # host:container
     restart: always
     stdin_open: true # -i
     tty: true # -t
@@ -43,12 +45,12 @@ services:
 
 volumes:
 #  db-data:
-  web-data:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: /home/suahn/data/www
+  web-data: # named volume can persist data after restart or remove a container
+    #driver: local
+    #driver_opts:
+    #  o: bind
+     # type: none
+     # device: /home/suahn/data/www
 
 networks:
   default:
