--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -16,12 +16,13 @@ RUN mkdir -p /etc/nginx/ssl \
 EXPOSE 443/tcp
 RUN echo "<?php phpinfo(); ?>" >> /var/www/html/info.php
 
-#RUN ["service", "nginx", "start"]
-#run in debug mode (foreground)
-RUN nginx -t
+#test config syntax
+#RUN nginx -t
 #www-data is the user that web servers on Ubuntu (Apache, nginx, for example)
 #use by default for normal operation.
 #The web server process can access any file that www-data can access.
-#RUN chown -R www-data:www-data *
-#RUN chmod -R 755 *
+WORKDIR /var/www/html
+RUN chown -R www-data:www-data *
+RUN chmod -R 755 *
+#run in debug mode (foreground)
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
