--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -23,6 +23,7 @@ RUN wget https://wordpress.org/latest.tar.gz \
     && tar -zxvf latest.tar.gz && rm -rf latest.tar.gz \
     && mv wordpress/* . && rm -r wordpress
 #CONFIG WORDPRESS
+COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
 COPY conf/wp-config.php .
 
 #CMD ["service", "php7.3-fpm", "start",";php", "-a"]
