--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,14 +7,14 @@ RUN apt-get update \
     && apt-get install -y nginx \
     && apt-get install -y openssl
 #CONFIG NGINX & SSL
-COPY conf/default /etc/nginx/sites-enabled/
+RUN rm /etc/nginx/sites-enabled/default
+COPY conf/default /etc/nginx/sites-enabled/suahn.42.fr
 RUN mkdir -p /etc/nginx/ssl \
     && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout \
     /etc/nginx/ssl/ssl_cert.key -out /etc/nginx/ssl/ssl_cert.crt \
     -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=Suahn/CN=localhost/EA=suahn@student.42.fr"
 
 EXPOSE 443/tcp
-RUN echo "<?php phpinfo(); ?>" >> /var/www/html/info.php
 
 #test config syntax
 #RUN nginx -t
