--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update \
 #which requires installation of the full Apache HTTP server software suite.
 #To avoid this, install either the php-cgi or the php-fpm module for Nginx.
     #&& apt-get install -y php libapache2-mod-php php7.3 php-json php-mbstring php-mysql php-fpm \
-    && apt-get install php7.3-fpm -y \
+    && apt-get install php7.3-fpm -y php7.3-mysql\
     && apt-get install -y wget
 EXPOSE 3306/tcp
 EXPOSE 9000/tcp 
@@ -22,9 +22,17 @@ WORKDIR /var/www/html
 RUN wget https://wordpress.org/latest.tar.gz \
     && tar -zxvf latest.tar.gz && rm -rf latest.tar.gz \
     && mv wordpress/* . && rm -r wordpress
+#SETUP PHPMYADMIN
+RUN wget https://files.phpmyadmin.net/phpMyAdmin/4.9.1/phpMyAdmin-4.9.1-english.tar.gz \
+    && tar xvf phpMyAdmin-4.9.1-english.tar.gz && rm -rf phpMyAdmin-4.9.1-english.tar.gz \
+    && mv phpMyAdmin-4.9.1-english phpmyadmin
 #CONFIG WORDPRESS
 COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
 COPY conf/wp-config.php .
+#CONFIG PHPMYADMIN
+COPY conf/config.inc.php phpmyadmin/
+
+RUN echo "<?php phpinfo(); ?>" >> /var/www/html/info.php
 
 #CMD ["service", "php7.3-fpm", "start",";php", "-a"]
 CMD service php7.3-fpm start; php -a
