--- a/srcs/.env
+++ b/srcs/.env
@@ -2,10 +2,11 @@ DOMAIN_NAME=suahn.42.fr
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=pass42
 MYSQL_DATABASE=db
-MYSQL_USER=user
-MYSQL_PASSWORD=user
+MYSQL_USER=wp
+MYSQL_PASSWORD=pass
+MYSQL_HOST=db
 # WORDPRESS SETUP
-WORDPRESS_DB_HOST=localhost
-WORDPRESS_DB_USER=user
-WORDPRESS_DB_PASSWORD=user
+WORDPRESS_DB_HOST=db
 WORDPRESS_DB_NAME=db
+WORDPRESS_DB_USER=wp
+WORDPRESS_DB_PASSWORD=pass
