--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,12 @@
 DOMAIN_NAME=suahn.42.fr
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=pass42
+MYSQL_ROOT_PASSWORD=root_pass
 MYSQL_DATABASE=db
 MYSQL_USER=wp
 MYSQL_PASSWORD=pass
-MYSQL_HOST=db
 # WORDPRESS SETUP
-WORDPRESS_DB_HOST=db
+WORDPRESS_DB_HOST=mysql
 WORDPRESS_DB_NAME=db
 WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
+WORDPRESS_TABLE_PREFIX=wp_
