--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build: ./requirements/nginx
     volumes:
       - web-data:/var/www/html
-    restart: always
+    restart: unless-stopped
     expose: # publish the ports to the linked services of the container
       - "9000"
     ports:
@@ -20,13 +20,13 @@ services:
     depends_on:
       - wordpress
     #tty: true
-  db:
+  mysql:
     #image: mariadb
-    container_name: db
+    container_name: mysql
     build: ./requirements/mariadb
     volumes:
       - db-data:/var/lib/mysql
-    restart: always
+    restart: unless-stopped
     env_file: .env
     expose:
       - "3306"
@@ -37,7 +37,7 @@ services:
     build: ./requirements/wordpress
     volumes:
       - web-data:/var/www/html # host:container
-    restart: always
+    restart: unless-stopped
     stdin_open: true # -i
     tty: true # -t
     env_file: .env
@@ -45,7 +45,7 @@ services:
       - "3306"
       - "9000"
     depends_on:
-      - db
+      - mysql
 
 volumes:
   db-data:
