--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -10,23 +10,18 @@ RUN apt-get update \
 EXPOSE 3306/tcp
 
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
+
 WORKDIR /docker-entrypoint-initdb.d
 
+COPY conf/setup.sql ./
+RUN ["chmod", "755", "setup.sql"]
+RUN service mysql start && mysql < setup.sql
 
-COPY conf/test.sh ./
-RUN ["chmod", "755", "test.sh"]
+#COPY conf/start-service.sh ./
+#RUN ["chmod", "755", "start-service.sh"]
+#RUN service mysql start && . ./start-service.sh
 
-#OPY conf/setup.sql ./
-#RUN ["chmod", "755", "setup.sql"]
-#RUN service mysql start && mysql < setup.sql
-
-COPY conf/start-service.sh ./
-RUN ["chmod", "755", "start-service.sh"]
-RUN service mysql start && . ./start-service.sh
+#mysql user gains access to the data files
 RUN chown -R mysql:mysql /var/lib/mysql
 
-#this runs the script within my own interactive shell,
-#instead of spawning another shell to run it.
-#CMD . ./start-service.sh
-#CMD ["bash", "start-service.sh"]
 CMD ["mysqld"]
