--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,7 @@ MYSQL_DATABASE=db
 MYSQL_USER=wp
 MYSQL_PASSWORD=pass
 # WORDPRESS SETUP
-WORDPRESS_DB_HOST=mysql
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_DB_NAME=db
 WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
