--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - db-data:/var/lib/mysql
     restart: unless-stopped
     env_file: .env
-    expose:dock
+    expose:
       - "3306"
    #tty: true
   wordpress:
