test if docker-entrypoint script works

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
 DOMAIN_NAME=suahn.42.fr
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=root_pass
-MYSQL_DATABASE=db
+MYSQL_DATABASE=wordpress
 MYSQL_USER=wp
 MYSQL_PASSWORD=pass
 # WORDPRESS SETUP
