--- a/srcs/.env
+++ b/srcs/.env
@@ -10,3 +10,8 @@ WORDPRESS_DB_NAME=db
 WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
 WORDPRESS_TABLE_PREFIX=wp_
+# WORDPRESS USERS
+WORDPRESS_ADMIN_USER=suahn
+WORDPRESS_ADMIN_PASSWORD=pass
+WORDPRESS_DEFAULT_USER=normal
+WORDPRESS_DEFAULT_PASSWORD=pass
