--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update \
 #which requires installation of the full Apache HTTP server software suite.
 #To avoid this, install either the php-cgi or the php-fpm module for Nginx.
     && apt-get install -y php-cli php-fpm php-mysqli php-json php-opcache php-mbstring php-xml php-gd php-curl \
-    && apt-get install -y wget
+    && apt-get install -y wget sudo
 
 EXPOSE 3306/tcp
 EXPOSE 9000/tcp
@@ -25,7 +25,12 @@ RUN wget https://wordpress.org/latest.tar.gz \
     && mv wordpress/* . && rm -r wordpress
 #CONFIG WORDPRESS
 COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
-COPY conf/wp-config.php .
+#+COPY conf/wp-config.php .
 
+#INSTALL WP-CLI
+RUN wget -P ~/ https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x ~/wp-cli.phar && sudo mv ~/wp-cli.phar /usr/local/bin/wp
+COPY conf/setup.sh .
+RUN bash ./setup.sh
 #CMD ["service", "php7.3-fpm", "start",";php", "-a"]
 CMD service php7.3-fpm start; php -a
