add adminer service

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -31,6 +31,7 @@ COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
 RUN wget -P ~/ https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
     && chmod +x ~/wp-cli.phar && sudo mv ~/wp-cli.phar /usr/local/bin/wp
 COPY conf/setup.sh .
+RUN ["chmod", "755", "setup.sh"]
 RUN bash ./setup.sh
 #CMD ["service", "php7.3-fpm", "start",";php", "-a"]
 CMD service php7.3-fpm start; php -a
