--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build: ./requirements/nginx
     volumes:
       - web-data:/var/www/html
-    restart: unless-stopped
+    restart: unless-stopped # Always restart unless the developers forcibly stop the process
     expose: # publish the ports to the linked services of the container
       - "9000"
     ports:
@@ -44,6 +44,17 @@ services:
     expose:
       - "3306"
       - "9000"
+    depends_on:
+      - mariadb
+
+  adminer:
+    container_name: adminer
+    build: ./requirements/adminer
+    restart: unless-stopped
+    stdin_open: true # -i
+    tty: true # -t
+    expose:
+      - "8080"
     depends_on:
       - mariadb
 
