--- a/srcs/.env
+++ b/srcs/.env
@@ -11,7 +11,7 @@ WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
 WORDPRESS_TABLE_PREFIX=wp_
 # WORDPRESS USERS
-WORDPRESS_ADMIN_USER=suahn
+WORDPRESS_ADMIN_USER=agent
 WORDPRESS_ADMIN_PASSWORD=pass
-WORDPRESS_DEFAULT_USER=normal
-WORDPRESS_DEFAULT_PASSWORD=pass
+WORDPRESS_USER=suahn
+WORDPRESS_USER_PASSWORD=pass
