--- a/srcs/.env
+++ b/srcs/.env
@@ -6,12 +6,17 @@ MYSQL_USER=wp
 MYSQL_PASSWORD=pass
 # WORDPRESS SETUP
 WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_NAME=db
+WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
 WORDPRESS_TABLE_PREFIX=wp_
+# WORDPRESS CONFIG
+WORDPRESS_URI=suahn@42.fr
+WORDPRESS_TITLE=suahn_home
 # WORDPRESS USERS
-WORDPRESS_ADMIN_USER=agent
+WORDPRESS_ADMIN=agent
 WORDPRESS_ADMIN_PASSWORD=pass
+WORDPRESS_ADMIN_EMAIL=fongdang01@gmail.com
 WORDPRESS_USER=suahn
 WORDPRESS_USER_PASSWORD=pass
+WORDPRESS_USER_EMAIL=suahn@student.42.fr
