--- a/srcs/.env
+++ b/srcs/.env
@@ -11,7 +11,7 @@ WORDPRESS_DB_USER=wp
 WORDPRESS_DB_PASSWORD=pass
 WORDPRESS_TABLE_PREFIX=wp_
 # WORDPRESS CONFIG
-WORDPRESS_URI=suahn@42.fr
+WORDPRESS_URI=https://suahn@42.fr
 WORDPRESS_TITLE=suahn_home
 # WORDPRESS USERS
 WORDPRESS_ADMIN=agent
