--- a/srcs/.env
+++ b/srcs/.env
@@ -20,3 +20,5 @@ WORDPRESS_ADMIN_EMAIL=fongdang01@gmail.com
 WORDPRESS_USER=suahn
 WORDPRESS_USER_PASSWORD=pass
 WORDPRESS_USER_EMAIL=suahn@student.42.fr
+# ADMINER
+ADMINER_DEFAULT_SERVER=mariadb
