--- a/srcs/requirements/adminer/Dockerfile
+++ b/srcs/requirements/adminer/Dockerfile
@@ -4,11 +4,9 @@ LABEL description="adminer"
 
 RUN apt-get update \
     && apt-get upgrade -y \
-    && apt-get install -y wget gnupg2 lsb-release \
-    && wget https://packages.sury.org/php/apt.gpg \
-    && apt-key add apt.gpg \
-    && echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" \
-    | tee /etc/apt/sources.list.d/php.list \
+    && apt-get install -y wget ca-certificates apt-transport-https lsb-release \
+    && wget -q https://packages.sury.org/php/apt.gpg -O- | apt-key add - \
+    && echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/php.list \
     && apt-get install -y php8.1
 
 RUN wget "http://www.adminer.org/latest.php" \
