--- a/srcs/requirements/adminer/Dockerfile
+++ b/srcs/requirements/adminer/Dockerfile
@@ -2,11 +2,11 @@ FROM debian:buster
 LABEL org.opencontainers.image.authors="suahn@student.42.fr"
 LABEL description="adminer"
 
-RUN apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y wget ca-certificates apt-transport-https lsb-release \
+RUN apt-get upgrade -y \
+    && apt-get install -y sudo wget ca-certificates apt-transport-https gnupg lsb-release \
     && wget -q https://packages.sury.org/php/apt.gpg -O- | apt-key add - \
     && echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/php.list \
+    && apt-get update \
     && apt-get install -y php8.1
 
 RUN wget "http://www.adminer.org/latest.php" \
