--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -16,8 +16,8 @@ RUN apt-get update \
 #A simple PHP install uses the libapache2-mod-php module by default,
 #which requires installation of the full Apache HTTP server software suite.
 #To avoid this, install either the php-cgi or the php-fpm module for Nginx.
-    && apt-get install -y php-fpm php-common php-cli php-mysqli \
-    php-json php-opcache php-mbstring php-xml php-gd php-curl php.json
+    && apt-get install -y php8.2-fpm php8.2-common php8.2-cli php8.2-mysqli \
+    php8.2-json php8.2-opcache php8.2-mbstring php8.2-xml php8.2-gd php8.2-curl php8.2.json
 
 EXPOSE 3306/tcp
 EXPOSE 9000/tcp
@@ -28,7 +28,7 @@ WORKDIR /var/www/html
 #    && tar -zxvf latest.tar.gz && rm -rf latest.tar.gz \
 #    && mv wordpress/* . && rm -r wordpress
 #CONFIG WORDPRESS
-COPY conf/www.conf /etc/php/7.3/fpm/pool.d/
+COPY conf/www.conf /etc/php/8.2/fpm/pool.d/
 #COPY conf/wp-config.php .
 
 #INSTALL WP-CLI
@@ -37,4 +37,4 @@ RUN wget -P ~/ https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-
 COPY conf/setup.sh .
 RUN ["chmod", "755", "setup.sh"]
 
-CMD bash ./setup.sh; service php7.3-fpm start; php -a
+CMD bash ./setup.sh; service php8.2-fpm start; php -a
