--- a/srcs/requirements/redis/Dockerfile
+++ b/srcs/requirements/redis/Dockerfile
@@ -6,8 +6,9 @@ RUN apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y redis-server php-redis
 
+COPY conf/redis.conf /etc/redis/
 #test if redis is installed
-RUN 127.0.0.1:6379> ping
+RUN redis-cli && 127.0.0.1:6379> ping
 
 EXPOSE 6379/tcp
 
