--- a/srcs/requirements/redis/config/redis.conf
+++ b/srcs/requirements/redis/config/redis.conf
@@ -504,7 +504,7 @@ replica-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-# requirepass foobared
+requirepass pass
 
 # Command renaming.
 #
@@ -563,7 +563,7 @@ replica-priority 100
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 256mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
@@ -594,7 +594,7 @@ replica-priority 100
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy allkeys-lru # replace old keys with fresher ones
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
